<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_github"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/sign_in_id"
            android:fontFamily="@font/notosanskr_bold"
            android:textColor="@color/sopt_black"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_github" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/sign_in_id_hint"
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanskr_regular"
            android:background="@drawable/selector_rectangle_gray_to_purple"
            android:textColorHint="@color/gray_B5"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_id" />


        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_pw"
            android:fontFamily="@font/notosanskr_bold"
            android:textColor="@color/sopt_black"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="@+id/et_id"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />


        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_pw_hint"
            android:inputType="textPassword"
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanskr_regular"
            android:background="@drawable/selector_rectangle_gray_to_purple"
            android:textColorHint="@color/gray_B5"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_pw"
            app:layout_constraintTop_toBottomOf="@+id/tv_pw" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_fill_sopt_main_purple_5dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:paddingTop="11dp"
            android:paddingBottom="13dp"
            android:text="@string/sign_in_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_signup"
            app:layout_constraintEnd_toEndOf="@+id/et_pw"
            app:layout_constraintStart_toStartOf="@+id/et_pw" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_fill_sopt_sub_purple_5dp"
            android:paddingTop="11dp"
            android:paddingBottom="13dp"
            android:text="@string/sign_in_sign_up"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
